@@ -147,6 +147,11 @@
 
 2014-04-11  Sanimir Agovic  <sanimir.agovic@intel.com>
 
+	* eval.c (evaluate_subexp_for_sizeof) <OP_VAR_VALUE>: If the type
+	passed to sizeof is dynamic evaluate the argument to compute the length.
+
+2014-04-11  Sanimir Agovic  <sanimir.agovic@intel.com>
+
 	* dwarf2loc.c (dwarf2_locexpr_baton_eval): New function.
 	(dwarf2_evaluate_property): New function.
 	* dwarf2loc.h (dwarf2_evaluate_property): New function prototype.
